# snaplet-dynamo

./: LICENSE  README.md  cabal.config  snaplet-dynamo.cabal
src/Snap/Snaplet/: DynamoDB.hs
