name:                snaplet-dynamo
version:             0.1.0.0
synopsis:            High-level bindings to Amazon's DynamoDB
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           BSD3
category:            Database, AWS, Web
build-type:          Simple
cabal-version:       >=1.10
description:         This package provides a snaplet which exposes
                     an interface to the AWS DynamoDB key-value database as
                     implemented by the dynamo package. Inline
                     documentation contains usage examples. 

source-repository head
  type:     git
  location: https://github.com/vertigomedia/snaplet-dynamo.git

library
  exposed-modules:     Snap.Snaplet.DynamoDB
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       HsOpenSSL >= 0.11
                     , aws-general >= 0.1.1
                     , base >=4.6 && <4.8
                     , configurator
                     , dynamo
                     , http-client >= 0.4.6.1
                     , http-client-openssl
                     , lens
                     , network
                     , retry >= 0.5.1
                     , snap
                     , text
                     , transformers
