name:                snaplet-dynamo
version:             0.1.0.0
synopsis:            High-level bindings to Amazon's DynamoDB
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           BSD3
category:            Database, AWS, Web
build-type:          Simple
cabal-version:       >=1.10
description:         This package provides a snaplet which exposes
                     an interface to the AWS DynamoDB key-value database as
                     implemented by the dynamo package. Inline
                     documentation contains usage examples. 

source-repository head
  type:     git
  location: https://github.com/vertigomedia/snaplet-dynamo.git

library
  exposed-modules:     Snap.Snaplet.DynamoDB
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aws-general     ==0.2.1
                     , base            
                     , configurator    ==0.3.0.0
                     , dynamo          ==0.1.0.0
                     , http-client     ==0.4.9
                     , http-client-tls ==0.2.2
                     , io-streams-http ==0.2.0.2
                     , lens            ==4.5
                     , retry           ==0.6
                     , snap            ==0.13.3.2
                     , text            ==1.2.0.4
                     , transformers    ==0.4.3.0